# grypho

./: .gitmodules  CMakeLists.txt  README.md  graph.hpp  interfaces.hpp  matrix.hpp
demo/: CMakeLists.txt  dot2tgf.cpp
include/: grypho.hpp  matrix.hpp
src/: CMakeLists.txt  grypho.cpp  grypho_fileio.cpp
